kubernetes/julianvmodesto-web/deploy-julianvmodesto-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: julianvmodesto-web
  labels:
    app: julianvmodesto-web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: julianvmodesto-web
    spec:
      volumes:
      - name: caddyfile
        configMap:
          name: caddyfile
      containers:
      - name: caddy
        image: julianvmodesto/caddy
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          # Mount Caddyfile only, not all of /etc
        - name: caddyfile
          mountPath: /etc/Caddyfile
          subPath: Caddyfile
