kubernetes/julianvmodesto-web/service-julianvmodesto-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: julianvmodesto-web
spec:
  selector:
    app: julianvmodesto-web
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
