kubernetes/julianvmodesto-web/svc-julianvmodesto-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: julianvmodesto-web
  labels:
    app: julianvmodesto-web
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: julianvmodesto-web
