kubernetes/julianvmodesto-web/networkpolicy-julianvmodesto-web.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
spec:
  podSelector:
    matchLabels:
      app: julianvmodesto-web
  ingress:
  - ports:
    - port: 80
    from: []
  egress:
  - {}
